# sourcegraph-search

./: .codegraphrc  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/sourcegraph_search/: __init__.py  cli.py  client.py  exceptions.py  formatters.py  installer.py  models.py  parsers.py  queries.py
src/sourcegraph_search/resources/skills/sourcegraph-search-skill/: SKILL.md
tests/: test_cli.py  test_client.py  test_formatters.py  test_installer.py  test_parsers.py
