[project]
name = "sourcegraph-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "twn39", email = "twn39@163.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.26.7",
    "httpx>=0.27.0",
]

[project.scripts]
sourcegraph-search = "sourcegraph_search.cli:app"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-mock>=3.15.1",
]
